Do not ask confirmation when closing an empty new file

https://bugzilla.gnome.org/show_bug.cgi?id=724777